--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"dependencies": {
 		"astro-image": "^0.0.1",
-		"astro-localization": "^0.0.2"
+		"astro-localization": "^0.0.2",
+		"astro-theme": "^0.0.1"
 	}
 }
